nullaway_error.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-expression/src/main/java/org/springframework/expression/spel/CodeFlow.java:630: error: [NullAway] dereferenced expression desc1 is @Nullable
                if (desc1.equals(desc2)) {
                         ^
    (see http://t.uber.com/nullaway )
